# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\CompanyApiController;
 use App\Http\Controllers\Api\ForgotPasswordApiController;
+use App\Http\Controllers\Api\NumberApiController;
 use App\Http\Controllers\Api\SiteApiController;
 use App\Http\Controllers\Api\TagsApiController;
 use App\Http\Controllers\Api\TimeClockApiController;
@@ -33,6 +34,10 @@ Route::middleware('auth:api')->group(function () {
 
     Route::group(['prefix' => '/sites'], function () {
         Route::get('/', [SiteApiController::class, 'index']);
+    });
+
+    Route::group(['prefix' => '/numbers'], function () {
+        Route::get('/', [NumberApiController::class, 'index']);
     });
 
     Route::group(['prefix' => '/nfc-tags'], function () {
